# kpodjito

./: .gitignore  Cargo.toml
crates/adapters/left/: Cargo.toml
crates/adapters/left/src/: lib.rs
crates/adapters/right/: Cargo.toml
crates/adapters/right/src/: lib.rs
crates/core/autograd/: Cargo.toml
crates/core/autograd/examples/: basic_autograd.rs  second_order_derivatives.rs
crates/core/autograd/src/: lib.rs
crates/core/data_processing/: Cargo.toml
crates/core/data_processing/examples/: batch_scan.rs  detect_modalities.rs  load_to_tensor.rs
crates/core/data_processing/src/: lib.rs
crates/core/domain/: Cargo.toml
crates/core/domain/src/: lib.rs
crates/core/error/: Cargo.toml
crates/core/error/src/: lib.rs
crates/core/math/: Cargo.toml
crates/core/math/examples/: basic_math.rs
crates/core/math/src/: lib.rs
crates/core/ports/: Cargo.toml
crates/core/ports/src/: lib.rs
crates/core/random/: Cargo.toml
crates/core/random/src/: lib.rs
crates/core/tensor/: Cargo.toml
crates/core/tensor/examples/: basic_tensor.rs
crates/core/tensor/src/: lib.rs
crates/core/use_cases/: Cargo.toml
crates/core/use_cases/src/: lib.rs
