[package]
name = "kpodjito-core-use-cases"
version = "0.1.0"
edition = "2024"

[dependencies]
kpodjito-core-domain = { path = "../domain" }
kpodjito-core-error = { path = "../error" }
kpodjito-core-math = { path = "../math" }
kpodjito-core-ports = { path = "../ports" }
kpodjito-core-tensor = { path = "../tensor" }